--- a/distribution/zed/extension.toml
+++ b/distribution/zed/extension.toml
@@ -1,35 +1,35 @@
-id = "mistral-vibe"
-name = "Mistral Vibe"
-description = "Mistral's open-source coding assistant"
+id = "codemaster"
+name = "codeMaster"
+description = "codeMaster - powerful CLI coding assistant with local LLM support"
 version = "2.2.0"
 schema_version = 1
-authors = ["Mistral AI"]
-repository = "https://github.com/mistralai/mistral-vibe"
+authors = ["codeMaster Contributors"]
+repository = "https://github.com/marshal0004/CodeMaster"
 
-[agent_servers.mistral-vibe]
-name = "Mistral Vibe"
+[agent_servers.codemaster]
+name = "codeMaster"
 icon = "./icons/mistral_vibe.svg"
 
-[agent_servers.mistral-vibe.targets.darwin-aarch64]
+[agent_servers.codemaster.targets.darwin-aarch64]
 archive = "https://github.com/mistralai/mistral-vibe/releases/download/v2.2.0/vibe-acp-darwin-aarch64-2.2.0.zip"
 cmd = "./vibe-acp"
 
-[agent_servers.mistral-vibe.targets.darwin-x86_64]
+[agent_servers.codemaster.targets.darwin-x86_64]
 archive = "https://github.com/mistralai/mistral-vibe/releases/download/v2.2.0/vibe-acp-darwin-x86_64-2.2.0.zip"
 cmd = "./vibe-acp"
 
-[agent_servers.mistral-vibe.targets.linux-aarch64]
+[agent_servers.codemaster.targets.linux-aarch64]
 archive = "https://github.com/mistralai/mistral-vibe/releases/download/v2.2.0/vibe-acp-linux-aarch64-2.2.0.zip"
 cmd = "./vibe-acp"
 
-[agent_servers.mistral-vibe.targets.linux-x86_64]
+[agent_servers.codemaster.targets.linux-x86_64]
 archive = "https://github.com/mistralai/mistral-vibe/releases/download/v2.2.0/vibe-acp-linux-x86_64-2.2.0.zip"
 cmd = "./vibe-acp"
 
-[agent_servers.mistral-vibe.targets.windows-aarch64]
+[agent_servers.codemaster.targets.windows-aarch64]
 archive = "https://github.com/mistralai/mistral-vibe/releases/download/v2.2.0/vibe-acp-windows-aarch64-2.2.0.zip"
 cmd = "./vibe-acp.exe"
 
-[agent_servers.mistral-vibe.targets.windows-x86_64]
+[agent_servers.codemaster.targets.windows-x86_64]
 archive = "https://github.com/mistralai/mistral-vibe/releases/download/v2.2.0/vibe-acp-windows-x86_64-2.2.0.zip"
 cmd = "./vibe-acp.exe"
